######################################################################
#
## #################################################################

add_subdirectory(dtkCore)
add_subdirectory(dtkLog)
add_subdirectory(dtkMath)
add_subdirectory(dtkMeta)
add_subdirectory(dtkTest)
add_subdirectory(dtkWidgets)
add_subdirectory(dtkScript)

