######################################################################
#
## #################################################################

add_subdirectory(dtkCore)
add_subdirectory(dtkGui)
add_subdirectory(dtkLog)
add_subdirectory(dtkMath)
add_subdirectory(dtkMeta)
add_subdirectory(dtkTest)
add_subdirectory(dtkWidgets)
add_subdirectory(dtkScript)
add_subdirectory(dtkFonts)
add_subdirectory(dtkThemes)
add_subdirectory(dtkIo)
add_subdirectory(dtkVisualization)
#add_subdirectory(dtkVisualizationWidgets)
add_subdirectory(dtkPlot)
#add_subdirectory(dtkCoreSupport)
#add_subdirectory(dtkMathSupport)

